# hunter

cmake/configs/: default.cmake
cmake/projects/OpenJPEG/: hunter.cmake
cmake/projects/cpprestsdk/: hunter.cmake
cmake/projects/jasper/: hunter.cmake
examples/OpenCV-extra/: CMakeLists.txt  config.cmake
examples/OpenJPEG/: CMakeLists.txt  foo.cpp
examples/cpprestsdk/: CMakeLists.txt  cpprestsdkexample.cpp
examples/jasper/: CMakeLists.txt
